9/24/2004   version 0.2 pre23   Ian Lewis <IanLewis@member.fsf.org>

    * Changed the layout of the options dialog by taking some jEdit code.
      Should be more flexable for adding different options categories etc. Not
      to mention that it would look better.

9/21/2004   version 0.2 pre22   Ian Lewis <IanLewis@member.fsf.org>

    * Documents loaded directly into the source view are not formatted
      automatically even if the format-pretty-print property is true. This
      prevents loading documents where whitespace is matters without marking
      them dirty.
    * Views now remove listeners that they add to the DocumentBuffer
    * Fixed bug that caused the document not to me marked dirty when it was
      changed.

8/25/2004   version 0.2 pre21   Ian Lewis <IanLewis@member.fsf.org>

    * The serializer now ignores the element-content-whitespace parameter since
      the parameter only makes sense when the document is validated by DTD or
      Schema that specifies that an element MUST have only child elements
      (element-content). Also if the DOM validates this info when being edited
      then the serializer could never write out whitespace in element content
      without invalidating the document. See
      http://xml.apache.org/xerces2-j/javadocs/dom3-api/index.html Section 2.10
    * Removed the whitespace in element content checkbox from the options since
      it's ignored
    * Removed the show whitespace only nodes check box since showing
      whitespace only nodes in conjunction with formatting options makes
      synchronization between options and the document difficult.
    * Made the DocumentBuffer class extend XMLDocument so that there is one
      class that deals with the document as a data model.

8/19/2004   version 0.2 pre20   Ian Lewis <IanLewis@member.fsf.org>

    * Fixed bug where the file is kept open by a reader or something too long.
      This didn't allow other editors to open the document until jsXe is